Improve appId documentation

--- a/Frontend/Custom/Javascript/src/index.html
+++ b/Frontend/Custom/Javascript/src/index.html
@@ -12,7 +12,7 @@
         (function (w,d,s,u,o,e,p){w[o]=w[o]||function(){return(w[o].q=w[o].q||[]).push(arguments),Promise.resolve({error:null,data:null})},
             e=d.createElement(s),p=d.getElementsByTagName(s)[0];e.src=u;e.async=1;p.parentNode.insertBefore(e,p)
         })(window, document, 'script','https://cdn.ownid.com/js/sdk.js', 'ownid');
-        ownid('init', { appId: '{app_id}' });
+        ownid('init', { appId: '{app_id}' }); // TODO: add your app id here from your OwnID console app (you can use your snippet) https://console.ownid.com/
     </script>
 </head>
 <body>
