init scripts update

--- a/Frontend/Custom/Javascript/src/pages/register.html
+++ b/Frontend/Custom/Javascript/src/pages/register.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type ="text/css" href="../styles/form.css">
     <script>
       ((o,w,n,i,d)=>{o[i]=o[i]||(async(...a)=>((o[i].q=o[i].q||[]).push(a),{error:null,data:null})),
-      (d=w.createElement("script")).src='https://cdn.dev.ownid.com/sdk/'+n,d.async=1,w.head.appendChild(d)})
+      (d=w.createElement("script")).src='https://cdn.ownid.com/sdk/'+n,d.async=1,w.head.appendChild(d)})
       (window,document,'{app_id}','ownid');
     </script>
     <script src="../services/httpRequests.js"></script>
