--- a/Frontend/Custom/Javascript/src/index.html
+++ b/Frontend/Custom/Javascript/src/index.html
@@ -10,7 +10,7 @@
     <script src="index.js"></script>
     <script>
       ((o,w,n,i,d)=>{o[i]=o[i]||(async(...a)=>((o[i].q=o[i].q||[]).push(a),{error:null,data:null})),
-      (d=w.createElement("script")).src='https://cdn.dev.ownid.com/sdk/'+n,d.async=1,w.head.appendChild(d)})
+      (d=w.createElement("script")).src='https://cdn.ownid.com/sdk/'+n,d.async=1,w.head.appendChild(d)})
       (window,document,'{app_id}','ownid');
     </script>
 </head>
